Update testing setup using Tox and MyPy (for type-checking)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,105 +35,63 @@ workflows:
 jobs:
   lint:
     docker:
-      - image: circleci/python:3.6
+      - image: themattrix/tox
     steps:
       - checkout
-      - run: sudo pip install flake8 codecov pep8-naming flake8-future-import
-      - run: sudo python setup.py install
-      - run: sudo make lint
+      - run: tox lint
 
-  unit-test-27:
+  unit-test-27: &unit_test
+    environment:
+      TOXENV: py27
     docker:
-      - image: circleci/python:2.7
+      - image: themattrix/tox
     steps:
       - checkout
-      - run: sudo python setup.py install
-      - run: sudo make test-unit
+      - run: tox test-unit
 
   unit-test-35:
-    docker:
-      - image: circleci/python:3.5
-    steps:
-      - checkout
-      - run: sudo python setup.py install
-      - run: sudo make test-unit
+    <<: *unit_test
+    environment:
+      TOXENV: py35
 
   unit-test-36:
-    docker:
-      - image: circleci/python:3.6
-    steps:
-      - checkout
-      - run: sudo python setup.py install
-      - run: sudo make test-unit
+    <<: *unit_test
+    environment:
+      TOXENV: py36
 
-  functional-test-27:
+  functional-test-27: &functional_test
+    environment:
+      TOXENV: py27
     docker:
-      - image: circleci/python:2.7
+      - image: themattrix/tox
     steps:
       - checkout
       - run:
           command: |
-            git clone https://github.com/bats-core/bats-core.git
-            cd bats-core
-            git checkout v1.0.2
-            sudo ./install.sh /usr/local
+            git clone https://github.com/bats-core/bats-core.git -b v1.0.2
+            ./bats-core/install.sh /usr/local
             bats --version
-      - run: sudo python setup.py install
       - run:
           command: |
             export TERM=xterm
             export AWS_DEFAULT_REGION=us-east-1
             export STACKER_NAMESPACE=cloudtools-functional-tests-$CIRCLE_BUILD_NUM
             export STACKER_ROLE=arn:aws:iam::459170252436:role/cloudtools-functional-tests-sta-FunctionalTestRole-1M9HFJ9VQVMFX
-            sudo -E make test-functional
+            tox test-functional
 
   functional-test-35:
-    docker:
-      - image: circleci/python:3.5
-    steps:
-      - checkout
-      - run:
-          command: |
-            git clone https://github.com/bats-core/bats-core.git
-            cd bats-core
-            git checkout v1.0.2
-            sudo ./install.sh /usr/local
-            bats --version
-      - run: sudo python setup.py install
-      - run:
-          command: |
-            export TERM=xterm
-            export AWS_DEFAULT_REGION=us-east-1
-            export STACKER_NAMESPACE=cloudtools-functional-tests-$CIRCLE_BUILD_NUM
-            export STACKER_ROLE=arn:aws:iam::459170252436:role/cloudtools-functional-tests-sta-FunctionalTestRole-1M9HFJ9VQVMFX
-            sudo -E make test-functional
+    <<: *functional_test
+    environment:
+      TOXENV: py35
 
   functional-test-36:
-    docker:
-      - image: circleci/python:3.6
-    steps:
-      - checkout
-      - run:
-          command: |
-            git clone https://github.com/bats-core/bats-core.git
-            cd bats-core
-            git checkout v1.0.2
-            sudo ./install.sh /usr/local
-            bats --version
-      - run: sudo python setup.py install
-      - run:
-          command: |
-            export TERM=xterm
-            export AWS_DEFAULT_REGION=us-east-1
-            export STACKER_NAMESPACE=cloudtools-functional-tests-$CIRCLE_BUILD_NUM
-            export STACKER_ROLE=arn:aws:iam::459170252436:role/cloudtools-functional-tests-sta-FunctionalTestRole-1M9HFJ9VQVMFX
-            sudo -E make test-functional
+    <<: *functional_test
+    environment:
+      TOXENV: py36
 
   cleanup-functional-buckets:
     docker:
       - image: circleci/python:2.7
     steps:
       - checkout
-      - run:
-          command: |
-            tests/cleanup_functional_test_buckets.sh
+      - run: tests/cleanup_functional_test_buckets.sh
