--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,16 @@
 [metadata]
 description-file = README.rst
 
+[flake8]
+ignore = FI50,FI51,FI53,FI14,E402
+require-code = True
+min-version = 2.7
+
+[mypy]
+ignore_missing_imports = True
+
 [nosetests]
-tests=stacker/tests
-detailed-errors=1
-with-coverage=1
-cover-package=stacker
+tests = stacker/tests
+detailed-errors = 1
+with-coverage = 1
+cover-package = stacker
