Change test runner from nose to py.test
Nose has been deprecated by its authors. py.test is very active, widely
used, and has many useful features for running and writing tests.

Changing the tests themselves away from unittest-style is a different
step that must be taken later. This commit only changes the tooling.

--- a/.gitignore
+++ b/.gitignore
@@ -56,17 +56,13 @@ dist/
 .eggs/
 *.egg
 
-# nosetest --with-coverage dumps these in CWD
+# Coverage artifacts
 .coverage
-
-
-
-vm_setup.sh
+htmlcov
 
 # Ignore development conf/env files
 dev.yaml
 dev.env
-
 tests/fixtures/blueprints/*-result
-
 FakeKey.pem
+vm_setup.sh
