--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 description-file = README.rst
 
-[nosetests]
-tests=stacker/tests
-detailed-errors=1
-with-coverage=1
-cover-package=stacker
+[aliases]
+test = pytest
+
+[tool:pytest]
+testpaths = stacker/tests
+cov = stacker
